@@ -15,5 +15,7 @@
 28/12/2015 Version 1.5.0:
 * 2a55838 (HEAD, master) feat: Update to Django 1.9 from 1.7
 29/12/2015 Version 1.5.1:
-* b4e773e (HEAD, master) fix: Add session messages to registration views/templates
-* 64f5747 (origin/master) feat: Add password management features
+* 285941e (HEAD, master) Add DEFAULT_FROM_EMAIL to settings. Add Forgot Password link to login form.
+* 6ea1c84 (origin/master) fix: Add session messages to registration views/templates
+* 64f5747 feat: Add password management features
+19/01/2016 Version 1.6.2:
